# Robotic-Metrology

./: README.md
calib_ws/: aligned_scan.csv
calib_ws/install/: local_setup.sh  setup.sh
calib_ws/install/hand_eye_calibration/include/hand_eye_calibration/: calibration_node.hpp
calib_ws/install/hand_eye_calibration/lib/hand_eye_calibration/: calibration_node  scan_processing_node
calib_ws/install/hand_eye_calibration/share/hand_eye_calibration/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
calib_ws/install/hand_eye_calibration/share/hand_eye_calibration/cmake/: hand_eye_calibrationConfig.cmake
calib_ws/log/: latest_build
calib_ws/src/hand_eye_calibration/: CMakeLists.txt
calib_ws/src/hand_eye_calibration/include/hand_eye_calibration/: scan_processing_node.hpp
calib_ws/src/hand_eye_calibration/launch/: hand_eye_calibration_launch.py
calib_ws/src/hand_eye_calibration/src/: calibration_node.cpp  scan_processing_node.cpp
calib_ws/src/hand_eye_calibration/src/data_generation_scripts/: data_generation_calibration.py  data_generation_scan_processing.py  verify_data_pairs.py
