<?xml version="1.0"?>
<package format="2">
  <name>hand_eye_calibration</name>
  <version>0.0.1</version>
  <description>ROS 2 Humble Package for Hand-Eye Calibration of Scanner on Robot Arm</description>
  <maintainer email="goldbe13@purdue.edu">Michael Goldberg</maintainer>
  <license>Apache 2.0</license>


  <depend>ament_cmake</depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>


  <exec_depend>rclcpp</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
